--- a/src/css/shoopcart.css
+++ b/src/css/shoopcart.css
@@ -33,6 +33,7 @@ em{color:#FF0000;font-style:normal;}
 .th-7{width:84px;}
 .shoopcart_list thead tr{height:36px;background: ;text-align:left;
 						text-align: center;}
+.shoopcart_list .shop_item{width:960px;height:187px;display:none;}			
 .shoopcart_list .shoop_inf{height:43px;padding-top:10px;line-height:43px;}
 .shoop_inf td{}
 .shopname{float:left;}
@@ -46,16 +47,17 @@ em{color:#FF0000;font-style:normal;}
 .text_inf {line-height: 20px;float:left;width:240px;padding-left: 10px;}
 .shoop_zhibao {width:84px;height:16px;background:url('img/shoopcartbg.png') no-repeat 0 -287px}
 .shoop_zhibao a{float:left;width:16px;height:16px;margin-right:5px;}
-.price{width:110px;height:108px;padding:0 10px;line-height: 108px;text-align: center}
-.count{width:94px;height:28px;padding:45px 0;}
-.count span{padding:0 10px;margin:-8px 4px;float:left;}
-.count .num{float:left;width:20px;height:16px;outline: none;}
-.count	.jiaonum{float:right;}
+.price{width:90px;height:108px;padding:0 10px;line-height: 108px;text-align: center}
+.count{width:130px;height:28px;padding:45px 0;}
+.count span{padding:0 8px;margin:0px 4px;float:left;border:1px solid #ededed;height:18px;line-height:18px;}
+.count .num{float:left;width:30px;height:18px;padding-left:1px;text-align:center;line-height:18px;
+			border:1px solid #ededed;}
 .jianprice{width:48px;height:28px;padding:40px 80px 40px 0;text-align:center;}
 .s-total{width:34px;height:28px;padding:40px 35px;}
 .del{width:66px;height:48px;padding:30px 10px;line-height: 24px;}
 
-
+.total-price {text-align:right;color:#ccc;}
+.total-price em{font-size:16px}
 
 
 
