--- a/src/css/list.css
+++ b/src/css/list.css
@@ -75,6 +75,66 @@
 				 padding-right:15px;background:#F7F7F7;text-align:right;}
 .select_item dd{height:37px;float:left;width:1046px;margin:0 20px;border-top:1px solid #E6E6E6; }
 .select_item_list li{float:left;padding-right:30px;}
+/***************content**********************/
+	/****zhibao***/
+.list_zhibao{width:1180px;height:28px;padding:32px 10px 0 10px;font-size:16px;}	
+.list_zhibao span{padding:0 25px;background:url('img/ico.png')no-repeat 0 -263px;height:26px;
+			float:left;line-height: 26px;}
+.list_zhibao a{float:left;padding-right: 10px;height:28px;}
+.addr_bar{height:38px;width:1198px;margin-top:10px;background:#f7f7f7;
+			border:1px solid #e6e6e6;line-height:38px;}
+.addr_list li{float:left;height:38px;}			
+.addr_list a{float:left;height:38px;padding:0 15px;}
+.address a{position:relative;width:78px;height:38px;}
+.address span{padding:0 27px 0 15px;}
+.addr_list .address{padding:0;position:relative;height:38px;width:80px;}
+.addr_list .address a{padding:0;}
+.address i{position:absolute;top:18px;left:58px;width:7px;height:4px;display:block;
+			background:url('img/ico.png')no-repeat -12px 0px;}
+.address .citylist{width:326px;padding:10px 10px 5px 10px;border:1px solid #e6e6e6;
+					position:absolute;top:38px;border-top:0;background:#fff;
+				   z-index: 5;display:none;left:-1px;}	   
+.address .citylist dl{margin:5px 0;float:left;}				   
+.address .citylist dd{float:left;margin-left:10px;}
+.address .citylist dd li{width:46px;height:20px;height:24px;}
+.address .citylist dt{float:left;height:20px;padding-left:4px;width:30px;color:#999;}				   
+.addresshover{background:#fff;border:1px solid #e6e6e6;border-top:none;border-bottom:none;
+			 margin-left:-2px;}
+.input_item input{width:15px;height:15px;float:left;margin-top:13px;margin-right:3px;}	
+.input_item  a{line-height:40px;}	
+/***************json数据加载****************/
+.ajax_data{padding:5px 0px;height:auto;}
+.goodslist .lihover{float:left;width:200px;height:348px;padding:20px 20px 10px 20px;
+					border:1px solid #e6e6e6;box-shadow: 0 0 8px rgba(0,0,0,0.1);
+				}
+.pagelist {padding:50px 0 30px 450px;width:auto;color:#B3B3B3;margin:0 auto;}
+.pagelist .prevone,.pagelist .nextone{width:42px;height:32px;border:1px solid #ededed;margin:0 2px;
+			padding:0 12px 0 25px;line-height:32px;text-align:center;}
+.pagelist a{display:inline-block;width:8px;height:32px;padding:0 12px;margin:0 2px;
+			border:1px solid #e6e6e6;text-align:center;line-height:32px;}
+.pagelist a:hover{border:1px solid #c40000;}
+.pagelist .aclick{background:#c40000;color:#fff;}
+.pagelist li{float:left;}				
+.goodslist li{width:200px;height:318px;padding:19px 19px 10px 19px;margin-bottom:30px;
+			 margin-top:20px;float:left;display:none;}	
+.img img{width:200px;height:200px;}
+.title{width:200px;height:40px;padding-top:16px;font-size:12px;line-height:20px;border:0;}
+.pagelist li{float:left;}
+.list_price{float:left;height:32px;color:#FF3333;font-weight:900;font-size:18px;
+			width:200px;display:block;}
+.list_price em{font-style:normal;font-family: Verdana;}			
+.lit_eval{height:22px;width:200px;margin-top:32px;}
+.eval{float:left;}
+.total{float:right;}
+.lit_eval span  {color:#999;}
+.lit_eval span i {color:#134BA0;}
+.store{color:#666;height:20px;line-height:20px;width:200px;color:#666;}
+.store b{font-weight:100;margin-left:10px;color:#134BA0;}
+.store .jiaoyi{display:none;}
+
+
+
+
 /***********最后添加的***************/
 .index_diao{position:fixed;left:-40px;bottom:200px;}
 .index_diao:hover{left:-10px;}
